--- a/README
+++ b/README
@@ -5,3 +5,7 @@ Plan:
 1) Find the components: Buttons, Display, STM;
 2) Create a board prototype;
 3) Device case (prototype); 
+
+Finds:
+
+1) STM32F407VGT6
